Implement ReOpen in Windows system